# GravityGPU-Project

./: .gitignore  CMakeLists.txt  HANDOFF.md  LICENSE  NOTICE  README.md
.cache/clangd/index/: cmd_processor.c.D59C3F64153B552B.idx  cmd_processor.h.B865A6755C607323.idx  framebuffer.c.7F3CDF9AC78A9E01.idx  gravity-trace.c.55227B71D1380FAA.idx  gravity_formats.c.6956A2571F6D693C.idx  gravity_formats.h.1C2685916EFC6D81.idx  gravity_protocol.c.04A377660CF61704.idx  gravity_protocol.h.C8968260606F4E93.idx  gravity_ring.h.BECE4F0A42F33DBF.idx  main.c.FCC37B32A5407DB0.idx  metal_to_vulkan.c.B3D529051AED3CEB.idx  metal_to_vulkan.h.4AC0881D8BC61026.idx  resource_tracker.c.4F2DDE914994FA10.idx  resource_tracker.h.7CAEAD403D0FCB21.idx  shader_cache.c.F39A73F18AF1C8D3.idx  shader_compiler.c.097C47A7CCC15F96.idx  test_protocol.c.CA4CCEC3FFA47EE1.idx  test_ring_buffer.c.0A094E4A3BC88A28.idx  vk_device.c.565108BBFFC38EB3.idx  vk_device.h.ADD447F5CDBC5F9A.idx
guest-driver/: Makefile  build-kext.sh
guest-driver/GravityGPU/: GravityGPUAccelerator.cpp  GravityGPUAccelerator.hpp  GravityGPUUserClient.cpp  GravityGPUUserClient.hpp  Info.plist
guest-userspace/: Makefile  main.cpp
host-daemon/src/: cmd_processor.c  cmd_processor.h  framebuffer.c  main.c  metal_to_vulkan.c  metal_to_vulkan.h  resource_tracker.c  resource_tracker.h  shader_cache.c  shader_compiler.c  vk_device.c  vk_device.h
protocol/include/: gravity_formats.h  gravity_protocol.h  gravity_ring.h
protocol/src/: gravity_formats.c  gravity_protocol.c
qemu-patches/hw/display/: gravity-gpu-pci.c  gravity-gpu.c  gravity-gpu.h  meson.build
scripts/: build-qemu.sh  check-csr.sh  debug-kext.sh  deploy-kext.sh  fetch-kext.sh  inject-kext-opencore.sh  launch-vm.sh  patch-opencore.sh  run-test-app.sh
tests/: test_protocol.c  test_ring_buffer.c
tools/: gravity-trace.c
